2010-08-05  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Pavel Feldman.

        Re-enabling inspector/extension* tests following a fix in InspectorController.
        https://bugs.webkit.org/show_bug.cgi?id=43344

        * platform/gtk/Skipped:
        * platform/qt/Skipped:
2010-08-05  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Separated WebInspector extension API injection logic from other scripts that inspector injects.
        Enabled injection of the API scripts even if inspector is disabled for inspector front-end page.
        https://bugs.webkit.org/show_bug.cgi?id=43344

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::inspectedWindowScriptObjectCleared):
        (WebCore::InspectorController::setInspectorExtensionAPI):
        * inspector/InspectorController.h:
        * inspector/InspectorFrontendHost.cpp:
        (WebCore::InspectorFrontendHost::setExtensionAPI):

Canonical link: https://commits.webkit.org/55563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64745 268f45cc-cd09-0410-ab3c-d52691b4dbfc