WebCore/inspector/InspectorController.h
@@ -279,6 +279,7 @@ public:
     InjectedScript injectedScriptForNodeId(long id);
     void addScriptToEvaluateOnLoad(const String& source);
     void removeAllScriptsToEvaluateOnLoad();
+    void setInspectorExtensionAPI(const String& source);
 
     static const String& inspectorStartsAttachedSettingName();
 
@@ -403,6 +404,7 @@ private:
 
     Vector<pair<long, String> > m_pendingEvaluateTestCommands;
     Vector<String> m_scriptsToEvaluateOnLoad;
+    String m_inspectorExtensionAPI;
 #if ENABLE(JAVASCRIPT_DEBUGGER)
     bool m_debuggerEnabled;
     bool m_attachDebuggerWhenShown;
